# stigaview-static

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  deploy.bash  pyproject.toml  requirements.txt  setup.cfg  stigaview.toml
.github/: dependabot.yml
.github/workflows/: deploy.yaml  gate.yml  test.yaml
docs/: styleguide.md  updating_content.md
docs/architecture/: 00_overview.md  20_product.md
products/al2023/: product.toml
products/alma9/: product.toml  v1r2.xml  v1r4.xml
products/appc_as/: product.toml
products/appc_ws/: product.toml  v1r2.xml
products/iis10/: product.toml  v3r5.xml
products/ios18/: product.toml
products/macos13/: product.toml
products/macos14/: product.toml  v1r1.xml  v2r2.xml  v2r4.xml
products/macos15/: product.toml  v1r3.xml  v1r5.xml
products/ocp/: product.toml  v2r4.xml
products/ol7/: product.toml  v3r2.xml
products/ol8/: product.toml
products/ol9/: product.toml
products/rhel7/: product.toml
products/rhel8/: product.toml  v2r3.xml
products/rhel9/: product.toml  v2r4.xml
products/rke2/: product.toml  v2r4.xml
products/sle12/: product.toml
products/sle15/: product.toml  v2r4.xml
products/srg-api/: product.toml  (+1 more)
public_html/: 404.html  CNAME
stigaview_static/: __main__.py  html_output.py  import_stig.py  json_output.py  main.py  models.py  utils.py
templates/: base.html  control.html  index.html  one_page_stig.html  product.html  products.html  search.html  srg_detail.html  srgs.html  stig.html  stigs.html
utils/: add_to_search.py  import_zips.py  minify.py
(+40 files in other folders)
