[project]
name = "stigaview-static"
description = "Create the STIG A View site static from XML."
authors = ["Matthew Burket <m@tthewburket.com>"]
license = "GPL-2.0-only"
readme = "README.md"
packages = [{include = "stigaview_static"}]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[tool.pycodestyle]
max-line-length = 120
exclude = [".tox", ".git" ]

[tool.mypy]
python_version = 3.11

[project.scripts]
stigaview-static = "stigaview_static.__main__:main"
